# lifeos-workbench-gpui

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  fix_colors.sh  fix_css.sh  fix_theme.sh  run.sh  setup.sh
.github/workflows/: ci.yml
core/: auth.js  db.js  registry.js  router.js  styles.css
db/: README.md  client.local.ts  client.mac.ts  client.worker.ts  package-lock.json  package.json  query.ts  schema.ts  tsconfig.json
docs/: AGENT-CONTROL.md  AI-MEMORY.md  ARCHITECTURE.md  BUILD-PLAN.md  DATA-MODEL.md  HARNESS-LOOP.md  INTEGRATIONS.md  LICENSING-REUSE.md  MANUAL-SETUP.md  MEDIA-INTELLIGENCE.md  MODULES.md  PLATFORM-SYSTEMS.md  RUST-COMPONENTS.md  SECURITY.md  SELF-EXTENSION.md  STORAGE-BACKENDS.md  VERSIONING.md
frontend/: DESIGN.md  FRONTEND.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.jsx  atlas_data.json  index.css  main.jsx
infra/gowa/: .env.example  docker-compose.yml
infra/nango/: .env.example  docker-compose.yml
migrations/: 0001_core.sql  0002_control_plane.sql  0003_derived.sql  0004_module_requests_chat_id.sql  0005_vcs_refs.sql  0006_release_configs.sql  0007_auth_password.sql  0008_auth_sessions.sql  0009_marketplace.sql  0010_push_subscriptions.sql  0011_workspace_envelope_key.sql  0012_workspace_databases.sql  0013_remove_billing.sql  0014_blob_backends.sql  0015_events_caused_by.sql  0016_events_schema_version.sql  0017_memory.sql  0018_derived_memory.sql
modules/_template/: README.md  module.js  views.md
modules/calendar/: module.js
modules/design/: module.js
modules/email/: module.js
modules/files/: module.js
modules/learning/: module.js
modules/marketing/: module.js
modules/notion/: module.js
modules/projects/: module.js
modules/reading/: module.js
modules/slack/: module.js
modules/social/: module.js
modules/tasks/: module.js
modules/trading/: module.js
modules/travel/: module.js
scripts/: bundle-app.sh  migrate-knowledge-atlas.mjs  scan-projects.mjs
server/: memvec.py  package-lock.json  package.json  scaffold.js
server/lib/: appBoot.js  loadManifest.js  moduleManifest.js  preToolUseHook.js  sandbox.js  slugify.js  worktree.js
server/scripts/: renderSmokeLive.js
server/test/: appBoot.test.js  loadManifest.test.js  moduleManifest.test.js  preToolUseHook.test.js  renderSmoke.test.js  scaffold.test.js  structural.test.js  worktree.test.js
server/validators/: module.schema.json  render.js  structural.js
services/: Cargo.toml
services/broker-guard/: Cargo.toml
services/lifeos-agents/: Cargo.toml
services/lifeos-agents/src/: lib.rs
services/lifeos-api/: Cargo.toml
services/lifeos-api/scripts/: browser_actuator.py
services/lifeos-api/src/: agents.rs  audit.rs  auth.rs  browser.rs  config.rs  crypto.rs  db.rs  error.rs  ids.rs  integrations.rs  kite.rs  lib.rs  main.rs  marketplace_sign.rs  models.rs  nango.rs  reading.rs  reconcile.rs  state.rs  storage.rs  whatsapp.rs
services/lifeos-api/src/routes/: browser.rs  calendar.rs  configs.rs  connection.rs  drive.rs  edge.rs  entity.rs  event.rs  files.rs  gmail.rs  health.rs  job.rs  kite.rs  llm.rs  login.rs  marketplace.rs  memory.rs  metrics.rs  mod.rs  module_request.rs  notion.rs  pipeline.rs  planned.rs  push.rs  reading.rs  register.rs  search.rs  slack.rs  storage.rs  stream.rs  travel.rs  vcs.rs  whatsapp.rs  workspace.rs  workspace_db.rs
services/lifeos-api/tests/: browser.rs  calendar.rs  connections.rs  files.rs  gmail.rs  integration.rs  integrations.rs  isolation.rs  kite.rs  memory.rs  notion.rs  reading.rs  search.rs  slack.rs  storage.rs  travel.rs  whatsapp.rs
services/lifeos-cli/: Cargo.toml
services/lifeos-cli/src/: cli.rs  client.rs  config.rs  main.rs  output.rs
services/lifeos-cli/src/commands/: data.rs  integrations.rs  misc.rs  mod.rs
services/lifeos-drain/: Cargo.toml
services/lifeos-drain/deploy/: com.lifeos.drain.plist
services/lifeos-drain/src/: ai.rs  lib.rs  main.rs
services/lifeos-drain/tests/: queue.rs
services/lifeos-ingest/: Cargo.toml
services/lifeos-ingest/examples/: transcribe_live.rs
services/lifeos-ingest/src/: audio.rs  docs_extract.rs  lib.rs  main.rs  ocr.rs  vision.rs
services/lifeos-memory/: Cargo.toml
services/lifeos-memory/src/: compiler.rs  consolidate.rs  error.rs  gate.rs  graph.rs  lib.rs  model.rs  procedural.rs  project.rs  redact.rs  retrieval.rs  testutil.rs  tier.rs
services/lifeos-memory/tests/: bench_fixtures.rs
services/lifeos-vcs/: Cargo.toml
services/lifeos-vcs/src/: backend.rs  backend_blob.rs  backend_index.rs  backend_proxy.rs  blob.rs  chunk.rs  commit.rs  diff.rs  encrypted.rs  gc.rs  hash.rs  lib.rs  migrate.rs  mirror.rs  snapshot.rs  store.rs
workbench/: Cargo.toml  rust-toolchain.toml
workbench/assets/: Workbench.icns
workbench/src/: acp.rs  agent_pane.rs  api.rs  decorations.rs  diff.rs  driver.rs  editor.rs  file_tree.rs  highlight.rs  layout.rs  lib.rs  lifeos_pane.rs  lsp.rs  main.rs  manifest.rs  markdown.rs  mcp_server.rs  mouse.rs  palette.rs  pane_store.rs  search_pane.rs  shell.rs  term_pane.rs  theme.rs  views.rs  workspace.rs
workbench/src/gui/: fonts.rs  input.rs  mod.rs  mouse.rs  postprocess.rs
workbench/src/gui/shaders/: centered_blit.wgsl
workbench/src/ui/: actions.rs  api_host.rs  app.rs  commands.rs  config.rs  file_tree.rs  import.rs  menu.rs  mod.rs  panes.rs  theme.rs  workspace_view.rs
workbench/src/ui/agent/: detect.rs  mod.rs
workbench/src/ui/editor/: lang.rs  mod.rs
workbench/src/ui/jobs/: mod.rs
workbench/src/ui/lifeos/: mod.rs  model.rs
workbench/src/ui/memory/: mod.rs
workbench/src/ui/recall/: mod.rs
workbench/src/ui/selfextend/: mod.rs
workbench/src/ui/settings/: catalog.rs  mod.rs
workbench/src/ui/terminal/: ansi.rs  backend.rs  element.rs  mod.rs  view.rs
workbench/src/ui/trading/: mod.rs
workbench/src/ui/vcs/: mod.rs
workbench/tests/: in_process_api.rs  renderers.rs
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: approvals.ts  (+11 more)
(+86 files in other folders)
