[workspace]
resolver = "2"
members = ["."]

[package]
name = "lifeos-workbench"
version = "0.1.0"
edition = "2021"
description = "Terminal-weight, agent-native workbench over lifeos-api (linked in-process)"

[[bin]]
name = "workbench"
path = "src/main.rs"

[dependencies]
lifeos-api = { path = "../services/lifeos-api" }
axum = "0.7.5"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
ratatui = "0.29"
crossterm = "0.28"
ratatui-wgpu = "0.4.1"
winit = "0.30"
fontdb = "0.23"
pollster = "0.4"
wgpu = "26"
bytemuck = { version = "1", features = ["derive"] }
muda = "0.19"
arboard = "3"
alacritty_terminal = "0.24"
portable-pty = "0.8"
helix-core = { git = "https://github.com/helix-editor/helix", tag = "25.07.1", version = "25.7.1" }
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"

[dev-dependencies]
ulid = "1.1"
