[workspace]
resolver = "2"
members = ["."]

[package]
name = "lifeos-workbench"
version = "0.1.0"
edition = "2021"
description = "GPU-native, agent-native workbench over lifeos-api (linked in-process)"

[[bin]]
name = "workbench"
path = "src/main.rs"

[features]
# The default build is the GPU-native gpui frontend. The legacy ratatui /
# glyph-grid renderer (inherited from the origin repo) is preserved behind
# this off-by-default feature; its modules are ported into `ui/` and dropped
# as the gpui frontend reaches parity (see CLAUDE.md build order).
default = []
legacy-tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:ratatui-wgpu",
    "dep:winit",
    "dep:fontdb",
    "dep:pollster",
    "dep:wgpu",
    "dep:bytemuck",
    "dep:muda",
    "dep:arboard",
]

[dependencies]
# In-process Life OS backend (unchanged from upstream).
lifeos-api = { path = "../services/lifeos-api" }
axum = "0.7.5"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# GPU-native GUI frontend: Zed's gpui engine + the gpui-component library.
# gpui-component 0.5.x pins gpui to this exact zed revision; match it so
# cargo unifies a single gpui.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b7e63cc29018c27bb24788ddb212f4cbdd861334" }

# Terminal engine (kept; rendered by a custom gpui element with a cursor).
alacritty_terminal = "0.24"
portable-pty = "0.8"

# NOTE: helix-core + tree-sitter grammars are intentionally absent. They pin
# tree-sitter 0.25/0.24, which collides with gpui-component's tree-sitter 0.26
# (a `links` crate - only one copy allowed in the graph). The editor step (#24)
# reintroduces syntax support aligned to 0.26 (or reuses gpui-component's
# built-in tree-sitter highlighting for the native engine).

# Legacy ratatui renderer (feature-gated, off by default).
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui-wgpu = { version = "0.4.1", optional = true }
winit = { version = "0.30", optional = true }
fontdb = { version = "0.23", optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "26", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
muda = { version = "0.19", optional = true }
arboard = { version = "3", optional = true }

[dev-dependencies]
ulid = "1.1"
