[package]
name = "lifeos-agents"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
