[package]
name = "lifeos-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
