[package]
name = "lifeos-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core", "replication", "tls"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"
async-stream = "0.3.6"
futures = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"
hmac = "0.12"
hex = "0.4"
lifeos-vcs = { path = "../lifeos-vcs" }
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
lifeos-pipelines = { path = "../lifeos-pipelines" }
scraper = "0.20"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
