[package]
name = "lifeos-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "lifeos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
