[package]
name = "lifeos-drain"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core"] }
ulid = "1.1"
blake3 = "1.5"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lifeos-ingest = { path = "../lifeos-ingest" }
lifeos-vcs = { path = "../lifeos-vcs" }
lifeos-agents = { path = "../lifeos-agents" }
lifeos-pipelines = { path = "../lifeos-pipelines" }
lifeos-memory = { path = "../lifeos-memory" }
lifeos-actions = { path = "../lifeos-actions" }
