[package]
name = "lifeos-ingest"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core"] }
lifeos-vcs = { path = "../lifeos-vcs" }
ulid = "1.1"
async-trait = "0.1"
symphonia = { version = "=0.5.5", features = ["wav", "mp3", "aac", "isomp4"] }
whisper-rs = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.36"
tempfile = "3.27"

[dev-dependencies]
hound = "3.5"
