[package]
name = "lifeos-memory"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
blake3 = "1.5"
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
lifeos-vcs = { path = "../lifeos-vcs" }

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
tempfile = "3"
