[package]
name = "lifeos-vcs"
version = "1.0.0"
edition = "2021"

[dependencies]
blake3 = "1.5.2"
fastcdc = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
walkdir = "2.5"
libsql = { version = "0.6.0", default-features = false, features = ["remote", "hrana", "core"] }
ulid = "1.1"
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"

[dev-dependencies]
tempfile = "3.27"
